<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent" android:layout_height="match_parent">
 <FrameLayout android:layout_width="match_parent" android:layout_height="64dp" android:layout_gravity="center">
  <ImageView android:id="@+id/art" android:src="@drawable/widget_preview" android:layout_width="match_parent" android:layout_height="match_parent" android:scaleType="fitXY" android:importantForAccessibility="no"/>
  <LinearLayout android:layout_width="match_parent" android:layout_height="52dp" android:layout_gravity="center" android:paddingLeft="9dp" android:paddingRight="9dp" android:orientation="horizontal">
   <TextView android:id="@+id/logo" android:layout_width="44dp" android:layout_height="match_parent" android:background="?android:attr/selectableItemBackgroundBorderless" android:contentDescription="@string/open_google"/>
   <TextView android:id="@+id/input" android:layout_width="0dp" android:layout_weight="1" android:layout_height="match_parent" android:background="?android:attr/selectableItemBackground" android:contentDescription="@string/type_search"/>
   <TextView android:id="@+id/button0" android:layout_width="52dp" android:layout_height="match_parent" android:contentDescription="@string/open_chrome" android:background="?android:attr/selectableItemBackgroundBorderless"/>
   <TextView android:id="@+id/button1" android:layout_width="52dp" android:layout_height="match_parent" android:contentDescription="@string/voice" android:background="?android:attr/selectableItemBackgroundBorderless"/>
   <TextView android:id="@+id/button2" android:layout_width="52dp" android:layout_height="match_parent" android:visibility="gone" android:contentDescription="@string/shortcut_label" android:background="?android:attr/selectableItemBackgroundBorderless"/>
  </LinearLayout>
 </FrameLayout>
</FrameLayout>